# SNCL

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.sh
include/: sncl_arraylist.h  sncl_clex.h  sncl_clioptions.h  sncl_linkedlist.h  sncl_test.h  sncl_typeid.h  sncl_youtube.hpp
source/: sncl_arraylist.c  sncl_clex.c  sncl_clioptions.c  sncl_linkedlist.c  sncl_test.c  sncl_youtube.cpp
tests/: CMakeLists.txt  Makefile  test_arraylist.c  test_clioptions.c  test_linkedlist.c  test_youtube.cpp
